# TunnelSDK_Refactor

./: .qmake.stash  README.md  TunnelSDK_Refactor.pro  TunnelSDK_Refactor.sln
DemoApp/: DemoApp.pro  DemoApp.qtvscr  DemoApp.vcxproj  DemoApp.vcxproj.filters  JsonDefectStorage.h  MainWindow.cpp  MainWindow.h  SqliteDefectStorage.h  SubwaySourceFactory.h  SubwayTileSource.h  main.cpp
ImageSlicer/: .qmake.stash  CMakeLists.txt  ImageSlicer.pro  ImageSlicer.qtvscr  ImageSlicer.sln  ImageSlicer.vcxproj  ImageSlicer.vcxproj.filters  OpenCvImageSlicer.cpp  OpenCvImageSlicer.h  SqliteImageSlicer.cpp  SqliteImageSlicer.h  main.cpp
SDK/: Makefile  Makefile.Debug  Makefile.Release  SDK.pro  TunnelViewerSDK.qtvscr  TunnelViewerSDK.vcxproj  TunnelViewerSDK.vcxproj.filters
SDK/include/: AbstractSourceFactory.h  AbstractTileSource.h  DefectManager.h  DefectSystem.h  IDefectStorage.h  TunnelGlobal.h
SDK/include/items/: DefectShapeItem.cpp  DefectShapeItem.h
SDK/include/tools/: AbstractTool.h  DefectDrawTool.h
SDK/src/: AsyncImageLoader.cpp  AsyncImageLoader.h  TiledGraphicsView.cpp  TiledGraphicsView.h  TunnelSectionItem.cpp  TunnelSectionItem.h  TunnelViewerController.cpp  TunnelViewerController.h
ai_competition_build/scripts/: generate_docx.py  generate_ppt.js  generate_ppt.py
ai竞赛资料/: AI竞赛综合汇报_cwb.pptx  模板1111(1).pptx  模板风格.pptx  竞赛说明.md
ai竞赛资料/展示平台参赛交付包/: 02_效果数据_量化指标.xlsx  04_提交清单与答辩提示.md
